AR dashboard card height fixes - dark mode

--- a/08072020/scss/dark-mode.scss
+++ b/08072020/scss/dark-mode.scss
@@ -1571,11 +1571,7 @@ ul.sapUshellInner {
                                 &:nth-child(1){
                                     padding-bottom: 6px;
                                     .sapMLnk.styleTitle1{
-                                        color: #FFFFFF;
-                                        font-size: 16.38px;
-                                        font-weight: 700;
-                                        letter-spacing: 0;
-                                        line-height: 19px;
+                                        display: none;
                                     }
                                 }
                                 &:nth-child(2){
@@ -1687,7 +1683,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 560px;
+                                height: 500px;
                             }
                         }
                     }
@@ -1813,7 +1809,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 560px;
+                                height: 485px;
                             }
                         }
                     }
@@ -1870,7 +1866,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 560px;
+                                height: 500px;
                             }
                         }
                     }
@@ -1929,7 +1925,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 560px;
+                                height: 485px;
                             }
                         }
                     }
